--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="skills-details">
                 <div class="text">
                     <div class="topic">Interpersonal skills</div>
-                    <p>As an IT project manager and full-stack developer with agile expertise, I bring hands-on experience in software testing and insights from visits to HUAWEI Thailand and ExxonMobil. My passion for innovation drives me to deliver successful
+                    <p>As a full-stack developer with agile expertise, I bring hands-on experience in software testing and insights from visits to HUAWEI Thailand and ExxonMobil. My passion for innovation drives me to deliver successful
                         IT solutions.. </p>
                     <li>Leadership</li>
                     <li>Problem-solving</li>
@@ -152,15 +152,15 @@
                     <div class="icon">
                         <i class="fas fa-desktop"></i>
                     </div>
-                    <div class="topic">Web Development</div>
-                    <p>HTML, CSS, Bootstrap, JavaScript</p>
+                    <div class="topic">Frontend Development</div>
+                    <p>TypeScript, JavaScript, Angular, Bootstrap</p>
                 </div>
                 <div class="box">
                     <div class="icon">
                         <i class="fas fa-tablet-alt"></i>
                     </div>
-                    <div class="topic">API Development</div>
-                    <p>Python-Flask, NodeJS-Express</p>
+                    <div class="topic">Backend Development</div>
+                    <p>Java-SpringBoot, Python-Flask, NodeJS-Express</p>
                 </div>
                 <div class="box">
                     <a href="https://www.itd.kmutnb.ac.th/itd-news.php?pbn=501" target="_blank">
@@ -169,14 +169,21 @@
                         </div>
                         <div class="topic">Mobile App Development</div>
                     </a>
-                    <p>Flutter - Dart</p>
+                    <p>Dart - Flutter</p>
+                </div>
+                <div class="box">
+                    <div class="icon">
+                        <i class="fab fa-android"></i>
+                    </div>
+                    <div class="topic">Version Control</div>
+                    <p>Git - GitHub, GitLab</p>
                 </div>
                 <div class="box">
                     <div class="icon">
                         <i class="fas fa-tablet-alt"></i>
                     </div>
-                    <div class="topic">DevOps</div>
-                    <p>Docker, Ansible, K8s</p>
+                    <div class="topic">Containerization</div>
+                    <p>Docker , DockerHub, Ansible, K8s</p>
                 </div>
                 <div class="box">
                     <a href="https://www.coursera.org/account/accomplishments/verify/3CQMGC257LCH" target=_blank>
@@ -185,21 +192,21 @@
                         </div>
                         <div class="topic">Agile competency</div>
                     </a>
-                    <p>Miro, Kanban, Asena</p>
+                    <p>Miro, Kanban, Asena, Jira</p>
                 </div>
                 <div class="box">
                     <div class="icon">
                         <i class="fas fa-database"></i>
                     </div>
-                    <div class="topic">RDBMSs</div>
-                    <p>MySQL, MongoDB</p>
+                    <div class="topic">DataBase</div>
+                    <p>PostgreSQL, MySQL, MongoDB, Cloud Firestore</p>
                 </div>
                 <div class="box">
                     <div class="icon">
                         <i class="fas fa-paint-brush"></i>
                     </div>
                     <div class="topic">Graphic Design</div>
-                    <p>Adobe: PhotoShop CC, Illustrator CC, Premiere Pro</p>
+                    <p>PhotoShop CC, Illustrator CC, Premiere Pro, Figma</p>
                 </div>
                 <div class="box">
                     <a href="https://www.coursera.org/account/accomplishments/professional-cert/9TVTRF4DK7NG" target=_blank>
@@ -209,14 +216,7 @@
                         </div>
                         <div class="topic">Data Analytics</div>
                     </a>
-                    <p>Python, Statistic, Tableau</p>
-                </div>
-                <div class="box">
-                    <div class="icon">
-                        <i class="fab fa-android"></i>
-                    </div>
-                    <div class="topic">Icon Design</div>
-                    <p>Adobe: PhotoShop CC, Illustrator CC</p>
+                    <p>Python, SPSS, PowerBI, Tableau, Orange</p>
                 </div>
 
                 <!-- <div class="box">
